--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 PORT=3000
-DATABASE_HOST=localhost
+DATABASE_HOST=dpg-clclvjt4lnec73e3hi90-a.singapore-postgres.render.com
 DATABASE_PORT=5432
-DATABASE_USERNAME=postgres
-DATABASE_PASSWORD=1234
-DATABASE_NAME=midterm_webnc
+DATABASE_USERNAME=classroom_database_user
+DATABASE_PASSWORD=UNxU9Oj7EtLpk2tHk0UcSra5FIeFrxnY
+DATABASE_NAME=classroom_database
 
 JWT_ACCESS_KEY=4kc4F4ZtsdyFw9/Vkq3RSF+oBKZlthl6MyLmXbx97Ic=
 JWT_ACCESS_EXPIRED=1d
